2005-03-08  Martin Blom  <martin@blom.org>

	* Automade.
