@@ -1,4 +1,5 @@
 
+#include "glgfx-config.h"
 #include <stdlib.h>
 #define GL_GLEXT_PROTOTYPES
 #include <GL/gl.h>
